refactor: Reorganize as clean monorepo structure
- Move mobile app files to /mobile directory
- Keep backend in /backend directory
- Create root-level README for monorepo overview
- Add workspace configuration in root package.json
- Create CONTRIBUTING.md with development guidelines
- Update .gitignore for monorepo structure
- Add mobile-specific README.md
- Add convenient npm scripts at root level
- Move mobile docs to mobile directory

This provides better organization and separation of concerns
while maintaining the benefits of a monorepo.

--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,48 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
+# Dependencies
 node_modules/
+*/node_modules/
+
+# Build outputs
+dist/
+build/
+*/dist/
+*/build/
+
+# Environment variables
+.env
+.env.local
+backend/.env
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Expo
 .expo/
-dist/
-web-build/
-expo-env.d.ts
+.expo-shared/
+mobile/.expo/
 
-# Native
-.kotlin/
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
+# React Native
+mobile/android/
+mobile/ios/
 
-# Metro
-.metro-health-check*
+# Database
+*.db
+*.sqlite
 
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
-.DS_Store
-*.pem
-
-# local env files
-.env*.local
-
-# typescript
-*.tsbuildinfo
-
-# generated native folders
-/ios
-/android
+# Temporary files
+*.tmp
+.cache/
