--- a/package.json
+++ b/package.json
@@ -1,30 +1,39 @@
 {
-  "name": "catfoodtracker",
+  "name": "picky-monorepo",
   "version": "1.0.0",
-  "main": "index.ts",
+  "description": "Picky Cat Food Tracker - Mobile app and backend API",
+  "private": true,
+  "workspaces": [
+    "mobile",
+    "backend"
+  ],
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "mobile": "cd mobile && npm start",
+    "mobile:ios": "cd mobile && npm run ios",
+    "mobile:android": "cd mobile && npm run android",
+    "mobile:web": "cd mobile && npm run web",
+    "backend": "cd backend && npm run dev",
+    "backend:build": "cd backend && npm run build",
+    "backend:setup": "cd backend && ./setup.sh",
+    "install:all": "npm install && cd mobile && npm install && cd ../backend && npm install",
+    "clean": "rm -rf node_modules mobile/node_modules backend/node_modules",
+    "dev": "echo 'Run mobile and backend in separate terminals:\\n  npm run mobile\\n  npm run backend'"
   },
-  "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/bottom-tabs": "^7.8.6",
-    "@react-navigation/native": "^7.1.21",
-    "@react-navigation/native-stack": "^7.7.0",
-    "expo": "~54.0.25",
-    "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0",
-    "react-native-web": "^0.21.0"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/akksi/picky.git"
   },
-  "devDependencies": {
-    "@types/react": "~19.1.0",
-    "typescript": "~5.9.2"
-  },
-  "private": true
+  "keywords": [
+    "cat",
+    "food",
+    "tracker",
+    "react-native",
+    "expo",
+    "nodejs",
+    "postgresql"
+  ],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {}
 }
+
